--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,9 @@ body {
     font-family: "SpecialEliteCyr", HelveticaNeueCyr, Arial, sans-serif;
     font-size: 20pt;
     font-weight: 600;
-    background:
-    repeating-linear-gradient(
+    background: repeating-linear-gradient(
             transparent 0,
-            rgba(0,0,0,.2) 3px,
+            rgba(0, 0, 0, .2) 3px,
             transparent 6px
     ), #bfe5ff;
     background-blend-mode: overlay;
@@ -35,7 +34,6 @@ body {
     margin: 10px;
     padding: 5px;
     width: 400px;
-    max-width: 100%;
     height: 30px;
     border-radius: 30px;
     border: 2px solid #ff9a45;
@@ -45,12 +43,35 @@ body {
     font-family: "SpecialEliteCyr", HelveticaNeueCyr, Arial, sans-serif;
     font-size: 20pt;
     font-weight: 600;
-    background: linear-gradient(rgba(255,255,255,1) 0%, rgba(230,230,230,1) 49%, rgba(215,215,215,1) 50%, rgba(200,200,200,1) 100%);
+    background: linear-gradient(rgba(255, 255, 255, 1) 0%, rgba(230, 230, 230, 1) 49%, rgba(215, 215, 215, 1) 50%, rgba(200, 200, 200, 1) 100%);
     border: none;
     width: 250px;
-    max-width: 100%;
     color: #e44;
     padding: 10px 15px;
     height: 50px;
     border-radius: 50px;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+    #verificationCode {
+        width: calc(100% - 30px);
+        font-size: 16pt;
+    }
+
+    #submitButton {
+        width: 75%;
+        font-size: 16pt;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 800px) {
+    #verificationCode {
+        width: calc(75% - 30px);
+        font-size: 18pt;
+    }
+
+    #submitButton {
+        width: 50%;
+        font-size: 18pt;
+    }
 }
