--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,12 @@ body {
     font-weight: 600;
     background: repeating-linear-gradient(
             transparent 0,
-            rgba(0, 0, 0, .2) 3px,
+            rgba(0, 0, 0, 0.1) 3px,
             transparent 6px
     ), #bfe5ff;
     background-blend-mode: overlay;
     background-size: cover;
-    margin: 15px;
+    margin: 100px 15px;
     text-align: center;
 }
 
@@ -53,6 +53,9 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
+    body {
+        margin: 15px;
+    }
     #verificationCode {
         width: calc(100% - 30px);
         font-size: 16pt;
@@ -65,6 +68,9 @@ body {
 }
 
 @media (min-width: 481px) and (max-width: 800px) {
+    body {
+        margin: 15px;
+    }
     #verificationCode {
         width: calc(75% - 30px);
         font-size: 18pt;
