--- a/cisco/cisco.css
+++ b/cisco/cisco.css
@@ -18,6 +18,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
 }
 
+h3, h4, h5, h6 {
+    text-indent: 1.25rem;
+}
+
 h1 {
     font-size: 1.5rem;
 }
@@ -28,6 +32,7 @@ h2 {
 
 h3 {
     font-size: 1.3rem;
+    text-indent: 1.25rem;
 }
 
 h4 {
