--- a/cisco/cisco.css
+++ b/cisco/cisco.css
@@ -24,6 +24,8 @@ h3, h4, h5, h6 {
 
 h1 {
     font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
 h2 {
@@ -74,5 +76,9 @@ code {
     body {
         font-size: 14px;
         margin: 10px;
+    }
+
+    h1 {
+        margin-bottom: 5px;
     }
 }
