--- a/cisco/cisco.css
+++ b/cisco/cisco.css
@@ -72,6 +72,18 @@ code {
     color: #00c200;
 }
 
+#donateButton {
+    font-size: 1.5rem;
+    background: linear-gradient(rgba(255, 255, 255, 1) 0%, rgba(230, 230, 230, 1) 49%, rgba(215, 215, 215, 1) 50%, rgba(200, 200, 200, 1) 100%);
+    border: none;
+    margin: 15px 0;
+    width: 150px;
+    padding: 5px;
+    height: 50px;
+    border-radius: 50px;
+    box-shadow: 0 0 10px rgba(61, 62, 63, 0.25);
+}
+
 @media screen and (max-width: 767px) {
     body {
         font-size: 14px;
@@ -80,5 +92,9 @@ code {
 
     h1 {
         margin-bottom: 5px;
+    }
+
+    #donateButton {
+        width: 80%;
     }
 }
